@@ -41,7 +41,6 @@ import java.util.Set;
 
 import org.fhir.ucum.Decimal;
 import org.fhir.ucum.UcumException;
-import org.hl7.fhir.dstu2016may.metamodel.ParserBase;
 import org.hl7.fhir.dstu2016may.model.Base;
 import org.hl7.fhir.dstu2016may.model.BooleanType;
 import org.hl7.fhir.dstu2016may.model.DateTimeType;
@@ -63,15 +62,15 @@ import org.hl7.fhir.dstu2016may.model.StringType;
 import org.hl7.fhir.dstu2016may.model.StructureDefinition;
 import org.hl7.fhir.dstu2016may.model.StructureDefinition.TypeDerivationRule;
 import org.hl7.fhir.dstu2016may.model.TimeType;
-import org.hl7.fhir.dstu2016may.model.Type;
 import org.hl7.fhir.dstu2016may.utils.FHIRLexer.FHIRLexerException;
-import org.hl7.fhir.dstu2016may.utils.FHIRPathEngine.IEvaluationContext.FunctionDetails;
+import org.hl7.fhir.dstu2016may.utils.IHostApplicationServices.FunctionDetails;
 import org.hl7.fhir.exceptions.DefinitionException;
 import org.hl7.fhir.exceptions.FHIRException;
 import org.hl7.fhir.exceptions.PathEngineException;
 import org.hl7.fhir.utilities.Utilities;
 
 import ca.uhn.fhir.model.api.TemporalPrecisionEnum;
+import org.hl7.fhir.utilities.fhirpath.FHIRPathConstantEvaluationMode;
 
 /**
  * 
@@ -80,74 +79,10 @@ import ca.uhn.fhir.model.api.TemporalPrecisionEnum;
  */
 public class FHIRPathEngine {
   private IWorkerContext worker;
-  private IEvaluationContext hostServices;
+  private IHostApplicationServices hostServices;
   private StringBuilder log = new StringBuilder();
   private Set<String> primitiveTypes = new HashSet<String>();
   private Map<String, StructureDefinition> allTypes = new HashMap<String, StructureDefinition>();
-
-  // if the fhir path expressions are allowed to use constants beyond those
-  // defined in the specification
-  // the application can implement them by providing a constant resolver
-  public interface IEvaluationContext {
-    public class FunctionDetails {
-      private String description;
-      private int minParameters;
-      private int maxParameters;
-
-      public FunctionDetails(String description, int minParameters, int maxParameters) {
-        super();
-        this.description = description;
-        this.minParameters = minParameters;
-        this.maxParameters = maxParameters;
-      }
-
-      public String getDescription() {
-        return description;
-      }
-
-      public int getMinParameters() {
-        return minParameters;
-      }
-
-      public int getMaxParameters() {
-        return maxParameters;
-      }
-
-    }
-
-    public Type resolveConstant(Object appContext, String name);
-
-    public String resolveConstantType(Object appContext, String name);
-
-    public boolean Log(String argument, List<Base> focus);
-
-    // extensibility for functions
-    /**
-     * 
-     * @param functionName
-     * @return null if the function is not known
-     */
-    public FunctionDetails resolveFunction(String functionName);
-
-    /**
-     * Check the function parameters, and throw an error if they are incorrect, or
-     * return the type for the function
-     * 
-     * @param functionName
-     * @param parameters
-     * @return
-     */
-    public TypeDetails checkFunction(Object appContext, String functionName, List<TypeDetails> parameters)
-        throws PathEngineException;
-
-    /**
-     * @param appContext
-     * @param functionName
-     * @param parameters
-     * @return
-     */
-    public List<Base> executeFunction(Object appContext, String functionName, List<List<Base>> parameters);
-  }
 
   /**
    * @param worker - used when validating paths (@check), and used doing value set
@@ -178,11 +113,11 @@ public class FHIRPathEngine {
   // implementation
   // HAPI overrides to these to support extensing the base model
 
-  public IEvaluationContext getConstantResolver() {
+  public IHostApplicationServices getConstantResolver() {
     return hostServices;
   }
 
-  public void setConstantResolver(IEvaluationContext constantResolver) {
+  public void setConstantResolver(IHostApplicationServices constantResolver) {
     this.hostServices = constantResolver;
   }
 
@@ -866,7 +801,7 @@ public class FHIRPathEngine {
       work.addAll(work2);
       break;
     case Constant:
-      Base b = processConstant(context, exp.getConstant());
+      Base b = processConstant(context, exp.getConstant(), FHIRPathConstantEvaluationMode.EXPLICIT);
       if (b != null)
         work.add(b);
       break;
@@ -949,7 +884,7 @@ public class FHIRPathEngine {
       result.update(evaluateFunctionType(context, focus, exp));
       break;
     case Constant:
-      result.addType(readConstantType(context, exp.getConstant()));
+      result.addType(readConstantType(context, exp.getConstant(), FHIRPathConstantEvaluationMode.EXPLICIT));
       break;
     case Group:
       result.update(executeType(context, focus, exp.getGroup(), atEntry));
@@ -978,7 +913,7 @@ public class FHIRPathEngine {
     return result;
   }
 
-  private Base processConstant(ExecutionContext context, String constant) throws PathEngineException {
+  private Base processConstant(ExecutionContext context, String constant, FHIRPathConstantEvaluationMode mode) throws PathEngineException {
     if (constant.equals("true")) {
       return new BooleanType(true);
     } else if (constant.equals("false")) {
@@ -992,7 +927,7 @@ public class FHIRPathEngine {
     } else if (constant.startsWith("\'")) {
       return new StringType(processConstantString(constant));
     } else if (constant.startsWith("%")) {
-      return resolveConstant(context, constant);
+      return resolveConstant(context, constant, mode);
     } else if (constant.startsWith("@")) {
       return processDateConstant(context.appInfo, constant.substring(1));
     } else {
@@ -1018,7 +953,7 @@ public class FHIRPathEngine {
       return new DateType(value);
   }
 
-  private Base resolveConstant(ExecutionContext context, String s) throws PathEngineException {
+  private Base resolveConstant(ExecutionContext context, String s, FHIRPathConstantEvaluationMode mode) throws PathEngineException {
     if (s.equals("%sct"))
       return new StringType("http://snomed.info/sct");
     else if (s.equals("%loinc"))
@@ -1040,7 +975,17 @@ public class FHIRPathEngine {
     else if (hostServices == null)
       throw new PathEngineException("Unknown fixed constant '" + s + "'");
     else
-      return hostServices.resolveConstant(context.appInfo, s);
+      return justOne(hostServices.resolveConstant(this, context.appInfo, s, mode));
+  }
+
+  private Base justOne(List<Base> bases) {
+    if (bases.size() == 0) {
+      return null;
+    } else if (bases.size() == 1) {
+      return bases.get(0);
+    } else {
+      throw new Error("In this version, only singleton constants");
+    }
   }
 
   private String processConstantString(String s) throws PathEngineException {
@@ -1348,7 +1293,7 @@ public class FHIRPathEngine {
       if (l.hasType("string") && r.hasType("string"))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) < 0);
       else if ((l.hasType("integer") || l.hasType("decimal")) && (r.hasType("integer") || r.hasType("decimal")))
-        return makeBoolean(new Double(l.primitiveValue()) < new Double(r.primitiveValue()));
+        return makeBoolean(Double.valueOf(l.primitiveValue()) < Double.valueOf(r.primitiveValue()));
       else if ((l.hasType("date", "dateTime", "instant")) && (r.hasType("date", "dateTime", "instant")))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) < 0);
       else if ((l.hasType("time")) && (r.hasType("time")))
@@ -1373,7 +1318,7 @@ public class FHIRPathEngine {
       if (l.hasType("string") && r.hasType("string"))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) > 0);
       else if ((l.hasType("integer", "decimal")) && (r.hasType("integer", "decimal")))
-        return makeBoolean(new Double(l.primitiveValue()) > new Double(r.primitiveValue()));
+        return makeBoolean(Double.valueOf(l.primitiveValue()) > Double.valueOf(r.primitiveValue()));
       else if ((l.hasType("date", "dateTime", "instant")) && (r.hasType("date", "dateTime", "instant")))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) > 0);
       else if ((l.hasType("time")) && (r.hasType("time")))
@@ -1398,7 +1343,7 @@ public class FHIRPathEngine {
       if (l.hasType("string") && r.hasType("string"))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) <= 0);
       else if ((l.hasType("integer", "decimal")) && (r.hasType("integer", "decimal")))
-        return makeBoolean(new Double(l.primitiveValue()) <= new Double(r.primitiveValue()));
+        return makeBoolean(Double.valueOf(l.primitiveValue()) <= Double.valueOf(r.primitiveValue()));
       else if ((l.hasType("date", "dateTime", "instant")) && (r.hasType("date", "dateTime", "instant")))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) <= 0);
       else if ((l.hasType("time")) && (r.hasType("time")))
@@ -1425,7 +1370,7 @@ public class FHIRPathEngine {
       if (l.hasType("string") && r.hasType("string"))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) >= 0);
       else if ((l.hasType("integer", "decimal")) && (r.hasType("integer", "decimal")))
-        return makeBoolean(new Double(l.primitiveValue()) >= new Double(r.primitiveValue()));
+        return makeBoolean(Double.valueOf(l.primitiveValue()) >= Double.valueOf(r.primitiveValue()));
       else if ((l.hasType("date", "dateTime", "instant")) && (r.hasType("date", "dateTime", "instant")))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) >= 0);
       else if ((l.hasType("time")) && (r.hasType("time")))
@@ -1753,7 +1698,7 @@ public class FHIRPathEngine {
     return result;
   }
 
-  private String readConstantType(ExecutionTypeContext context, String constant) throws PathEngineException {
+  private String readConstantType(ExecutionTypeContext context, String constant, FHIRPathConstantEvaluationMode mode) throws PathEngineException {
     if (constant.equals("true"))
       return "boolean";
     else if (constant.equals("false"))
@@ -1763,12 +1708,12 @@ public class FHIRPathEngine {
     else if (Utilities.isDecimal(constant, false))
       return "decimal";
     else if (constant.startsWith("%"))
-      return resolveConstantType(context, constant);
+      return resolveConstantType(context, constant, mode);
     else
       return "string";
   }
 
-  private String resolveConstantType(ExecutionTypeContext context, String s) throws PathEngineException {
+  private String resolveConstantType(ExecutionTypeContext context, String s, FHIRPathConstantEvaluationMode mode) throws PathEngineException {
     if (s.equals("%sct"))
       return "string";
     else if (s.equals("%loinc"))
@@ -1792,7 +1737,7 @@ public class FHIRPathEngine {
     else if (hostServices == null)
       throw new PathEngineException("Unknown fixed constant type for '" + s + "'");
     else
-      return hostServices.resolveConstantType(context.appInfo, s);
+      return hostServices.resolveConstantType(this, context.appInfo, s, mode).getType();
   }
 
   private List<Base> execute(ExecutionContext context, Base item, ExpressionNode exp, boolean atEntry)
@@ -2761,7 +2706,7 @@ public class FHIRPathEngine {
           && path.startsWith(ed.getPath().substring(0, ed.getPath().length() - 3))
           && path.length() > ed.getPath().length() - 3) {
         String s = Utilities.uncapitalize(path.substring(ed.getPath().length() - 3));
-        if (ParserBase.isPrimitive(s))
+        if (isPrimitive(s))
           return new ElementDefinitionMatch(ed, s);
         else
           return new ElementDefinitionMatch(ed, path.substring(ed.getPath().length() - 3));
@@ -2782,6 +2727,12 @@ public class FHIRPathEngine {
       }
     }
     return null;
+  }
+
+  private static boolean isPrimitive(String code) {
+    return Utilities.existsInList(code, "xhtml", "boolean", "integer", "string", "decimal", "uri", "base64Binary",
+        "instant", "date", "dateTime", "time", "code", "oid", "id", "markdown", "unsignedInt", "positiveInt", "xhtml",
+        "base64Binary");
   }
 
   private boolean isAbstractType(List<TypeRefComponent> list) {
